osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_random_int/test_random_int_validation_0.txt
error: invalid `start`
--> main.sml:1:20
     |
   1 | r = RandomInt(start=0,end=0)
     |                     ^ the `start` value must be less than the `end` value
